[EPMCBDCCSS-701]: fix inputread